# scrapedrive-python

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.codex/skills/scrapedrive-sdk/: SKILL.md
.codex/skills/scrapedrive-sdk/agents/: openai.yaml
.github/workflows/: ci.yml  publish.yml
src/scrapedrive/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py  test_live.py
