[project]
name = "scrapedrive"
version = "0.1.0"
description = "Typed Python SDK for the ScrapeDrive scraping API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["scrapedrive", "scraping", "sdk", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Documentation = "https://scrapedrive.com/docs/"
Homepage = "https://scrapedrive.com"
Issues = "https://scrapedrive.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapedrive"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.15.9",
]
